scribble-assertions/src/test/resources/bad/extensions/assertions/DbCHistorySensititivy.scr
module bad.extensions.assertions.DbCHistorySensititivy;


type <java> "java.lang.Int" from "rt.jar" as Int;
type <java> "java.lang.Long" from "rt.jar" as Long;

// History Sensitivity
global protocol Proto1(role A, role B, role C)
{
	MSG(x:Int) from A to B;
	
	MSG(y:Int) from B to C;
	
	//[z>x]
	MSG(z:Int) from C to A;  @(z > x);
}
